--- a/package.json
+++ b/package.json
@@ -17,10 +17,18 @@
     "babel-loader": "^6.2.4",
     "babel-preset-react": "^6.5.0",
     "bootstrap": "^3.3.6",
+    "cloudinary": "^1.3.1",
     "flux": "^2.1.1",
+    "form-data": "^1.0.0-rc4",
     "react": "^15.0.1",
+    "react-addons-linked-state-mixin": "^15.0.1",
     "react-dom": "^15.0.1",
+    "react-dropzone": "^3.4.0",
+    "react-link-state": "^0.1.2",
     "react-router": "^2.3.0",
     "webpack": "^1.13.0"
+  },
+  "devDependencies": {
+    "json-loader": "^0.5.4"
   }
 }
